Updated graphs and tables.

--- a/main.tex
+++ b/main.tex
@@ -607,13 +607,14 @@ calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\
 
 \begin{table}[h]
 \caption{\%-errors across calculation types for short chain alkenes  (C\(_{2}\)-C\(_{12}\))}
-\begin{tabular}{c c c c c c c}
+\begin{tabular}{c c c c c c }
 \hline
-Calculation Type & HF & PBE0 & PBE & TPSS & TPSSh & TD-DFT \\
+Calculation Type & HF & PBE0 & PBE & TPSS & TPSSh \\
 \hline\hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 & 2.6 \\
-Mean Triplet-Ion error (\%) & 5.3 & 6.0 & 8.1 & 10.1 & 9.0 & - \\
-Mean Singlet HOMO error (\%) & 1.3 & 4.0 & 8.5 & 12.0 & 9.7 & - \\
+Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
+Mean Triplet-Ion error (\%) & 5.3 & 6.0 & 8.1 & 10.1 & 9.0 \\
+Mean Singlet HOMO error (\%) & 1.3 & 4.0 & 8.5 & 12.0 & 9.7 \\
+Mean TD-DFT Excitation error (\%) & - & 2.6 & - & - & - \\ 
 \hline
 \end{tabular}
 \label{table:alkene_errors}
@@ -658,13 +659,14 @@ by the pseudo-systems, and the percentage errors, displayed in Table
 
 \begin{table}[h]
 \caption{\%-errors across calculation types for ring-systems}
-\begin{tabular}{c c c c c c c}
+\begin{tabular}{c c c c c c }
 \hline
-Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH & TD-DFT \\
+Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
 \hline\hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 3.3 & 1.9 & 1.7 & 6.8 & 6.7 & 0.099 \\
-Mean Triplet-Ion error (\%) & 7.4 & 10.0 & 12.5 & 14.4 & 13.0 & - \\
-Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 & - \\
+Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 3.3 & 1.9 & 1.7 & 6.8 & 6.7 \\
+Mean Triplet-Ion error (\%) & 7.4 & 10.0 & 12.5 & 14.4 & 13.0 \\
+Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 \\
+Mean TD-DFT Excitation error (\%) & - & 0.099 & - & - & - \\ 
 \hline
 \end{tabular}
 \label{table:ring_system_errors}
@@ -672,13 +674,14 @@ Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 & - \\
 
 \begin{table}[h]
 \caption{\%-errors across calculation types for long chain alkenes (C\(_{20}\)-C\(_{100}\))}
-\begin{tabular}{c c c c c c c}
+\begin{tabular}{c c c c c c }
 \hline\hline
-Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH & TD-DFT \\
+Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
 \hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 55.3 & 85.8 & 83.4 & 239.8 & 320.2 & 0.005 \\
-Mean Triplet-Ion error (\%) & 25.1 & 6.7 & 9.4 & 10.3 & 11.6 & - \\
-Mean Singlet HOMO error (\%) & 1.8 & 7.3 & 11.3 & 16.7 & 13.6 & - \\
+Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 55.3 & 85.8 & 83.4 & 239.8 & 320.2 \\
+Mean Triplet-Ion error (\%) & 25.1 & 6.7 & 9.4 & 10.3 & 11.6 \\
+Mean Singlet HOMO error (\%) & 1.8 & 7.3 & 11.3 & 16.7 & 13.6 \\
+Mean TD-DFT Excitation error (\%) & - & 0.005 & - & - & - \\ 
 \hline
 \end{tabular}
 \label{table:long_alkene_errors}
