--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -104,12 +104,12 @@
 }
 
 @book{TURBOMOLE,
-   title = "Turbomole 7.1",
-   publisher = {{University of Karlsruhe, Germany}},
-   author = {Ahlrichs, R. and B{\"a}r, M. and Baron, H.-P. and Bauerschmitt, R. and B{\"o}cker, S. and Ehrig, M. and Eichkorn, K. and Elliott, S. and Furche, F. and Haase, F. and H{\"a}ser, M. and Horn, H. and Huber, C. and Huniar, U. and Kattannek, M. and K{\"o}lmel, C. and Kollwitz, M. and May, K. and Ochsenfeld, C. and {\"O}hm, H. and Sch{\"a}fer, A. and Schneider, U. and Treutler, O. and von Arnim, M. and Weigend, F. and Weis, P. and Weiss, H.},
-   year = {2000},
-   groups = {biblio\_pseudo\_alex}
-}
+     title = {TURBOMOLE V7.1 2016},
+     publisher = {a development of University of Karlsruhe and 
+         {Forschungszentrum Karlsruhe GmbH}, 1989-2007, 
+         {TURBOMOLE GmbH}, since 2007; available from 
+          http://www.turbomole.com.}
+} 
 
 @book{me_structure_theory,
    title = "Molecular Electronic-Structure Theory",
